overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ body {
   font-family: "Inter";
   font-size: 1.125rem;
   color: rgb(255, 255, 255);
+  overflow-x: hidden;
 }
 
 .main-content {
